# celery-php

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  README.txt  RedisConnector.php  amqp.php  amqplibconnector.php  amqplibconnectorssl.php  amqppeclconnector.php  celery.php  composer.json  install_amqp.sh  phpunit.xml.dist  redisconnector.php  test.php  unittest.php
amqp-1.0.3/: amqp.c  amqp_channel.c  amqp_connection.c  amqp_connection.h  amqp_envelope.c  amqp_exchange.c  amqp_queue.c  php_amqp.h
docgen/: footer.tpl  gen.sh
rabbitmq-c/: .hgignore  .hgtags  CMakeLists.txt  COPYING  LICENSE-MIT  Makefile  Makefile.am  Makefile.in  README  README.windows  TestCInline.cmake  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
rabbitmq-c/.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
rabbitmq-c/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
rabbitmq-c/.hg/store/data/: _a_u_t_h_o_r_s.i  _c_make_lists.txt.i  _c_o_p_y_i_n_g.i  _i_n_s_t_a_l_l.i  _l_i_c_e_n_s_e-_g_p_l-2.0.i  _l_i_c_e_n_s_e-_m_i_t.i  _l_i_c_e_n_s_e-_m_p_l-_rabbit_m_q.i  _makefile.am.i  _r_e_a_d_m_e.i  _r_e_a_d_m_e.md.i  _r_e_a_d_m_e.windows.i  _t_h_a_n_k_s.i  _t_o_d_o.i  _test_c_inline.cmake.i  configure.ac.i  ~2ehgignore.i  ~2ehgtags.i
rabbitmq-c/.hg/store/data/cmake/: _find_p_o_p_t.cmake.i  _lib_find_macros.cmake.i
rabbitmq-c/.hg/store/data/debian/: amqp-tools.docs.i  amqp-tools.install.i  changelog.i  compat.i  control.i  copyright.i  librabbitmq-dev.docs.i  librabbitmq-dev.install.i  librabbitmq.install.i  rules.i
rabbitmq-c/.hg/store/data/etc/: build-ms.sh.i  install-mingw.sh.i
rabbitmq-c/.hg/store/data/examples/: _c_make_lists.txt.i  _makefile.am.i  amqp__bind.c.i  amqp__consumer.c.i  amqp__exchange__declare.c.i  amqp__listen.c.i  amqp__listenq.c.i  amqp__producer.c.i  amqp__sendstring.c.i  amqp__unbind.c.i  example__utils.c.i  example__utils.h.i  utils.c.i  utils.h.i
rabbitmq-c/.hg/store/data/examples/unix/: platform__utils.c.i
rabbitmq-c/.hg/store/data/examples/windows/: platform__utils.c.i
rabbitmq-c/.hg/store/data/librabbitmq/: _c_make_lists.txt.i  _makefile.am.i  amqp.h.i  amqp__api.c.i  amqp__connection.c.i  amqp__debug.c.i  amqp__mem.c.i  amqp__private.h.i  amqp__socket.c.i  amqp__table.c.i  amqp__url.c.i  codegen.py.i  f.c.i
rabbitmq-c/.hg/store/data/librabbitmq/unix/: socket.c.i  socket.h.i
rabbitmq-c/.hg/store/data/librabbitmq/utils/: strdup.h.i
rabbitmq-c/.hg/store/data/librabbitmq/windows/: socket.c.i  socket.h.i
rabbitmq-c/.hg/store/data/msinttypes/: inttypes.h.i  stdint.h.i
rabbitmq-c/.hg/store/data/tests/: _makefile.am.i  test__parse__url.c.i  test__tables.c.i  test__tables.expected.i
rabbitmq-c/.hg/store/data/tools/: _c_make_lists.txt.i  _makefile.am.i  common.c.i  common.h.i  common__consume.c.i  common__consume.h.i  consume.c.i  declare__queue.c.i  delete__queue.c.i  get.c.i  publish.c.i
rabbitmq-c/.hg/store/data/tools/doc/: _makefile.am.i  consume.xml.i  declare__queue.xml.i  delete__queue.xml.i  get.xml.i  librabbitmq-tools.xml.i  publish.xml.i
rabbitmq-c/.hg/store/data/tools/unix/: process.c.i  process.h.i
rabbitmq-c/.hg/store/data/tools/windows/: compat.c.i  compat.h.i  process.c.i  process.h.i
rabbitmq-c/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
rabbitmq-c/cmake/: FindPOPT.cmake
rabbitmq-c/codegen/: .hgtags
rabbitmq-c/codegen/.hg/: branchheads.cache  dirstate  tags.cache
rabbitmq-c/codegen/.hg/store/: 00changelog.i  00manifest.i  fncache
rabbitmq-c/codegen/.hg/store/data/: ~2ehgtags.i
rabbitmq-c/debian/: amqp-tools.docs  amqp-tools.install  changelog  control  copyright  librabbitmq-dev.install  librabbitmq.install  rules
rabbitmq-c/etc/: build-ms.sh  install-mingw.sh
rabbitmq-c/examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  amqp_bind  amqp_bind.c  amqp_consumer  amqp_consumer.c  amqp_exchange_declare  amqp_exchange_declare.c  amqp_listen  amqp_listen.c  amqp_listenq  amqp_listenq.c  amqp_producer  amqp_producer.c  amqp_sendstring  amqp_sendstring.c  amqp_unbind  amqp_unbind.c  utils.c  utils.h
rabbitmq-c/examples/.deps/: amqp_bind.Po  amqp_consumer.Po  amqp_exchange_declare.Po  amqp_listen.Po  amqp_listenq.Po  amqp_producer.Po  amqp_sendstring.Po  amqp_unbind.Po  platform_utils.Po  utils.Po
rabbitmq-c/examples/.libs/: amqp_bind  amqp_consumer  amqp_exchange_declare  amqp_listen  amqp_listenq  amqp_producer  amqp_sendstring  amqp_unbind
rabbitmq-c/examples/unix/: platform_utils.c
rabbitmq-c/examples/windows/: platform_utils.c
rabbitmq-c/librabbitmq/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  amqp.h  amqp_api.c  amqp_api.lo  amqp_connection.c  amqp_connection.lo  amqp_framing.c  amqp_framing.h  amqp_framing.lo  amqp_mem.c  amqp_mem.lo  amqp_private.h  amqp_socket.c  amqp_socket.lo  amqp_table.c  amqp_table.lo  amqp_url.c  amqp_url.lo  codegen.py  librabbitmq.la  socket.lo
rabbitmq-c/librabbitmq/.deps/: amqp_api.Plo  amqp_connection.Plo  amqp_framing.Plo  amqp_mem.Plo  amqp_socket.Plo  amqp_table.Plo  amqp_url.Plo  socket.Plo
rabbitmq-c/librabbitmq/.libs/: librabbitmq.la  librabbitmq.lai  librabbitmq.so.0
rabbitmq-c/librabbitmq/unix/: socket.c  socket.h
rabbitmq-c/librabbitmq/windows/: socket.c  socket.h
rabbitmq-c/tests/: Makefile  Makefile.am  Makefile.in  test_parse_url.c  test_tables.c
rabbitmq-c/tools/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  common.c  common.h  consume.c  declare_queue.c  delete_queue.c  get.c  publish.c
rabbitmq-c/tools/doc/: Makefile  Makefile.am  Makefile.in  consume.xml  librabbitmq-tools.xml  publish.xml
rabbitmq-c/tools/unix/: process.c  process.h
rabbitmq-c/tools/windows/: compat.c  compat.h  process.c  process.h
src/: AMQPLibConnector.php  AMQPLibConnectorSsl.php  AbstractAMQPConnector.php  AsyncResult.php  Celery.php  CeleryAbstract.php  CeleryAdvanced.php  CeleryConnectionException.php  CeleryException.php  CeleryPublishException.php  CeleryTimeoutException.php  (+3 more)
(+16 files in other folders)
